# remote-desktop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  chat_message.hpp  protocol.hpp  tcpClient.cpp  tcpServer.cpp  videoCaptureNvFBC.cpp
doxygen/: Doxyfile
include/: protocol.hpp  tcpServer.hpp
src/: chat_client.cpp  chat_server.cpp  encodeTest.cpp  protocol.cpp  tcpClient.cpp  tcpClient.org  tcpServer.cpp  tcpServer.org  videoCaptureNvFBC.cpp  videoCaptureNvFBC.org
